@@ -1,12 +1,11 @@
 package org.opentripplanner.updater.stoptime;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNotSame;
-import static org.junit.Assert.assertSame;
-import static org.junit.Assert.assertTrue;
-import static org.opentripplanner.gtfs.GtfsContextBuilder.contextBuilder;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNotSame;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.google.protobuf.InvalidProtocolBufferException;
 import com.google.transit.realtime.GtfsRealtime.TripDescriptor;
@@ -14,25 +13,20 @@ import com.google.transit.realtime.GtfsRealtime.TripDescriptor.ScheduleRelations
 import com.google.transit.realtime.GtfsRealtime.TripUpdate;
 import com.google.transit.realtime.GtfsRealtime.TripUpdate.StopTimeEvent;
 import com.google.transit.realtime.GtfsRealtime.TripUpdate.StopTimeUpdate;
-import java.text.ParseException;
-import java.util.Arrays;
+import java.time.LocalDate;
 import java.util.Calendar;
+import java.util.List;
 import java.util.Map;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Ignore;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.opentripplanner.ConstantsForTests;
-import org.opentripplanner.graph_builder.module.geometry.GeometryAndBlockProcessor;
-import org.opentripplanner.gtfs.GtfsContext;
 import org.opentripplanner.model.FeedScopedId;
-import org.opentripplanner.model.PickDrop;
 import org.opentripplanner.model.Timetable;
 import org.opentripplanner.model.TimetableSnapshot;
 import org.opentripplanner.model.Trip;
 import org.opentripplanner.model.TripPattern;
 import org.opentripplanner.model.calendar.CalendarService;
-import org.opentripplanner.model.calendar.CalendarServiceData;
 import org.opentripplanner.model.calendar.ServiceDate;
 import org.opentripplanner.routing.graph.Graph;
 import org.opentripplanner.routing.graph.GraphIndex;
@@ -40,36 +34,21 @@ import org.opentripplanner.routing.trippattern.Deduplicator;
 import org.opentripplanner.routing.trippattern.RealTimeState;
 import org.opentripplanner.routing.trippattern.TripTimes;
 
-/**
- * TODO OTP2 - Test is too close to the implementation and will need to be reimplemented.
- */
-@Ignore
 public class TimetableSnapshotSourceTest {
 
-  private static final Graph graph = new Graph();
+  static Graph graph = new Graph();
   private static final boolean fullDataset = false;
   private static final ServiceDate serviceDate = new ServiceDate();
   private static byte[] cancellation;
-  private static GtfsContext context;
   private static String feedId;
 
   private TimetableSnapshotSource updater;
 
-  @BeforeClass
-  public static void setUpClass() throws Exception {
-    // The ".turnOnSetAgencyToFeedIdForAllElements()" is commented out so it can be
-    // removed from the code, it in no longer in use. It is not deleted here to better
-    // allow the reader of the test understand how the test once worked. There should
-    // be new test to replace this one.
+  @BeforeAll
+  public static void setUpClass() {
+    graph = ConstantsForTests.buildGtfsGraph(ConstantsForTests.FAKE_GTFS);
 
-    context =
-      contextBuilder(ConstantsForTests.FAKE_GTFS).withIssueStoreAndDeduplicator(graph).build();
-
-    feedId = context.getFeedId().getId();
-
-    GeometryAndBlockProcessor factory = new GeometryAndBlockProcessor(context);
-    factory.run(graph);
-    graph.index();
+    feedId = graph.getFeedIds().stream().findFirst().get();
 
     final TripDescriptor.Builder tripDescriptorBuilder = TripDescriptor.newBuilder();
 
@@ -83,9 +62,8 @@ public class TimetableSnapshotSourceTest {
     cancellation = tripUpdateBuilder.build().toByteArray();
   }
 
-  @Before
+  @BeforeEach
   public void setUp() {
-    graph.putService(CalendarServiceData.class, context.getCalendarServiceData());
     updater = new TimetableSnapshotSource(graph);
   }
 
@@ -101,7 +79,7 @@ public class TimetableSnapshotSourceTest {
       graphIndex,
       serviceCodes,
       fullDataset,
-      Arrays.asList(TripUpdate.parseFrom(cancellation)),
+      List.of(TripUpdate.parseFrom(cancellation)),
       feedId
     );
 
@@ -115,7 +93,7 @@ public class TimetableSnapshotSourceTest {
       graphIndex,
       serviceCodes,
       fullDataset,
-      Arrays.asList(TripUpdate.parseFrom(cancellation)),
+      List.of(TripUpdate.parseFrom(cancellation)),
       feedId
     );
     assertSame(snapshot, updater.getTimetableSnapshot());
@@ -146,7 +124,7 @@ public class TimetableSnapshotSourceTest {
       graphIndex,
       serviceCodes,
       fullDataset,
-      Arrays.asList(TripUpdate.parseFrom(cancellation)),
+      List.of(TripUpdate.parseFrom(cancellation)),
       feedId
     );
 
@@ -158,10 +136,7 @@ public class TimetableSnapshotSourceTest {
     assertSame(forToday.getTripTimes(tripIndex2), schedule.getTripTimes(tripIndex2));
 
     final TripTimes tripTimes = forToday.getTripTimes(tripIndex);
-    for (int i = 0; i < tripTimes.getNumStops(); i++) {
-      assertEquals(PickDrop.CANCELLED, pattern.getBoardType(i));
-      assertEquals(PickDrop.CANCELLED, pattern.getAlightType(i));
-    }
+
     assertEquals(RealTimeState.CANCELED, tripTimes.getRealTimeState());
   }
 
@@ -206,7 +181,7 @@ public class TimetableSnapshotSourceTest {
       graphIndex,
       serviceCodes,
       fullDataset,
-      Arrays.asList(tripUpdate),
+      List.of(tripUpdate),
       feedId
     );
 
@@ -227,11 +202,11 @@ public class TimetableSnapshotSourceTest {
   }
 
   @Test
-  public void testHandleAddedTrip() throws ParseException {
+  public void testHandleAddedTrip() {
     // GIVEN
 
     // Get service date of today because old dates will be purged after applying updates
-    final ServiceDate serviceDate = new ServiceDate(Calendar.getInstance());
+    final ServiceDate serviceDate = new ServiceDate(LocalDate.now());
 
     final String addedTripId = "added_trip";
 
@@ -317,6 +292,7 @@ public class TimetableSnapshotSourceTest {
     CalendarService calendarService = graph.getCalendarService();
     Deduplicator deduplicator = graph.deduplicator;
     GraphIndex graphIndex = graph.index;
+
     Map<FeedScopedId, Integer> serviceCodes = graph.getServiceCodes();
     updater.applyTripUpdates(
       calendarService,
@@ -324,7 +300,7 @@ public class TimetableSnapshotSourceTest {
       graphIndex,
       serviceCodes,
       fullDataset,
-      Arrays.asList(tripUpdate),
+      List.of(tripUpdate),
       feedId
     );
 
@@ -332,11 +308,13 @@ public class TimetableSnapshotSourceTest {
     // Find new pattern in graph starting from stop A
     var stopA = graph.index.getStopForId(new FeedScopedId(feedId, "A"));
     // Get trip pattern of last (most recently added) outgoing edge
-    // FIXME create a new test to see that add-trip realtime updates work
-    TripPattern tripPattern = null;
-    assertNotNull("Added trip pattern should be found", tripPattern);
+    var snapshot = updater.getTimetableSnapshot();
+    var patternsAtA = snapshot.getPatternsForStop(stopA);
 
-    final TimetableSnapshot snapshot = updater.getTimetableSnapshot();
+    assertNotNull(patternsAtA, "Added trip pattern should be found");
+    assertEquals(1, patternsAtA.size());
+    var tripPattern = patternsAtA.stream().findFirst().get();
+
     final Timetable forToday = snapshot.resolve(tripPattern, serviceDate);
     final Timetable schedule = snapshot.resolve(tripPattern, null);
 
@@ -344,8 +322,8 @@ public class TimetableSnapshotSourceTest {
 
     final int forTodayAddedTripIndex = forToday.getTripIndex(addedTripId);
     assertTrue(
-      "Added trip should be found in time table for service date",
-      forTodayAddedTripIndex > -1
+      forTodayAddedTripIndex > -1,
+      "Added trip should be found in time table for service date"
     );
     assertEquals(
       RealTimeState.ADDED,
@@ -353,17 +331,15 @@ public class TimetableSnapshotSourceTest {
     );
 
     final int scheduleTripIndex = schedule.getTripIndex(addedTripId);
-    assertEquals("Added trip should not be found in scheduled time table", -1, scheduleTripIndex);
+    assertEquals(-1, scheduleTripIndex, "Added trip should not be found in scheduled time table");
   }
 
   @Test
-  public void testHandleModifiedTrip() throws ParseException {
-    // TODO
-
+  public void testHandleModifiedTrip() {
     // GIVEN
 
     // Get service date of today because old dates will be purged after applying updates
-    ServiceDate serviceDate = new ServiceDate(Calendar.getInstance());
+    ServiceDate serviceDate = new ServiceDate(LocalDate.now());
     String modifiedTripId = "10.1";
 
     TripUpdate tripUpdate;
@@ -477,7 +453,7 @@ public class TimetableSnapshotSourceTest {
       graphIndex,
       serviceCodes,
       fullDataset,
-      Arrays.asList(tripUpdate),
+      List.of(tripUpdate),
       feedId
     );
 
@@ -502,29 +478,29 @@ public class TimetableSnapshotSourceTest {
         modifiedTripId
       );
       assertTrue(
-        "Original trip should be found in scheduled time table",
-        originalTripIndexScheduled > -1
+        originalTripIndexScheduled > -1,
+        "Original trip should be found in scheduled time table"
       );
       final TripTimes originalTripTimesScheduled = originalTimetableScheduled.getTripTimes(
         originalTripIndexScheduled
       );
       assertFalse(
-        "Original trip times should not be canceled in scheduled time table",
-        originalTripTimesScheduled.isCanceled()
+        originalTripTimesScheduled.isCanceled(),
+        "Original trip times should not be canceled in scheduled time table"
       );
       assertEquals(RealTimeState.SCHEDULED, originalTripTimesScheduled.getRealTimeState());
 
       final int originalTripIndexForToday = originalTimetableForToday.getTripIndex(modifiedTripId);
       assertTrue(
-        "Original trip should be found in time table for service date",
-        originalTripIndexForToday > -1
+        originalTripIndexForToday > -1,
+        "Original trip should be found in time table for service date"
       );
       final TripTimes originalTripTimesForToday = originalTimetableForToday.getTripTimes(
         originalTripIndexForToday
       );
       assertTrue(
-        "Original trip times should be canceled in time table for service date",
-        originalTripTimesForToday.isCanceled()
+        originalTripTimesForToday.isCanceled(),
+        "Original trip times should be canceled in time table for service date"
       );
       assertEquals(RealTimeState.CANCELED, originalTripTimesForToday.getRealTimeState());
     }
@@ -535,7 +511,7 @@ public class TimetableSnapshotSourceTest {
         new FeedScopedId(feedId, modifiedTripId),
         serviceDate
       );
-      assertNotNull("New trip pattern should be found", newTripPattern);
+      assertNotNull(newTripPattern, "New trip pattern should be found");
 
       final Timetable newTimetableForToday = snapshot.resolve(newTripPattern, serviceDate);
       final Timetable newTimetableScheduled = snapshot.resolve(newTripPattern, null);
@@ -546,8 +522,8 @@ public class TimetableSnapshotSourceTest {
         modifiedTripId
       );
       assertTrue(
-        "New trip should be found in time table for service date",
-        newTimetableForTodayModifiedTripIndex > -1
+        newTimetableForTodayModifiedTripIndex > -1,
+        "New trip should be found in time table for service date"
       );
       assertEquals(
         RealTimeState.MODIFIED,
@@ -555,9 +531,9 @@ public class TimetableSnapshotSourceTest {
       );
 
       assertEquals(
-        "New trip should not be found in scheduled time table",
         -1,
-        newTimetableScheduled.getTripIndex(modifiedTripId)
+        newTimetableScheduled.getTripIndex(modifiedTripId),
+        "New trip should not be found in scheduled time table"
       );
     }
   }
@@ -582,7 +558,7 @@ public class TimetableSnapshotSourceTest {
       graphIndex,
       serviceCodes,
       fullDataset,
-      Arrays.asList(TripUpdate.parseFrom(cancellation)),
+      List.of(TripUpdate.parseFrom(cancellation)),
       feedId
     );
     final TimetableSnapshot snapshotA = updater.getTimetableSnapshot();
@@ -607,7 +583,7 @@ public class TimetableSnapshotSourceTest {
       graphIndex,
       serviceCodes,
       fullDataset,
-      Arrays.asList(tripUpdate),
+      List.of(tripUpdate),
       feedId
     );
     final TimetableSnapshot snapshotB = updater.getTimetableSnapshot();
